修正了HibernateSqueezerFilter进行unsquee的时候无法对null进行判断 的bug
git-svn-id: http://dev.bjmaxinfo.com/svn/corner/trunk/corner@1990 bda6c913-8cf9-0310-89cc-b5856a464ced

--- a/src/main/webapp/many2many2/BAList.html
+++ b/src/main/webapp/many2many2/BAList.html
@@ -14,7 +14,7 @@
 		  <tr jwcid="@contrib:TableRows" elment="tr" row="ognl:entity" converter="ognl:converter">
 		  	<th align="center"><span jwcid="@Insert" value="ognl:entity.name" /></th>
 			<td align="center"><span jwcid="@Insert" value="ognl:entity.message" /></td>
-			<td align="center"><span jwcid="@Insert" value="ognl:entity.a.cnName"></span></td>
+			<td align="center"><span jwcid="@Insert" value="ognl:entity.getA().getCnName()"></span></td>
 			<td align="center"><a href="#" jwcid="@DirectLink" listener="listener:doEditEntityAction" parameters="ognl:entity">Edit</a></td>
 			<td align="center"><a href="#" jwcid="@DirectLink" listener="listener:doDeleteEntityAction" parameters="ognl:entity">Delete</a></td>
 		  </tr>
