初步重构完成Selector。
git-svn-id: http://dev.bjmaxinfo.com/svn/corner/trunk/corner@2023 bda6c913-8cf9-0310-89cc-b5856a464ced

--- a/src/main/webapp/WEB-INF/DemoBorder.html
+++ b/src/main/webapp/WEB-INF/DemoBorder.html
@@ -2,6 +2,7 @@
 	  
 	  >
 <body leftmargin="0" topmargin="0" rightmargin="0" bottommargin="0" jwcid="@Body">
+<span jwcid="@Script" script="/scripts/Corner.script"/>
 <span jwcid="@RenderBody"/>
 <!--
 <div jwcid="@contrib:InspectorButton"/>
