--- a/src/main/webapp/one/AForm.html
+++ b/src/main/webapp/one/AForm.html
@@ -21,4 +21,5 @@
       <input jwcid="@Submit" type="Submit" value="message:button.Okay"/>
       <input jwcid="@Any" type="Button" value="message:button.Cancle" onClick="javascript:tapestry.form.cancel(this.form);"/>
     </form>
+	<div id="debug">f</div>
 </span>
