--- a/src/main/webapp/one/ARowForm.html
+++ b/src/main/webapp/one/ARowForm.html
@@ -7,7 +7,16 @@
             <span key="name">name</span>
           </td>
           <td>
-            <input jwcid="nameField" /><input jwcid="passwordField"/>colors:<span jwcid="colorsField">asdf</span>
+            <input jwcid="nameField" /><input jwcid="passwordField"/>
+          </td>
+		</tr>
+		<tr>
+          <td>
+            <span key="name">colors</span>
+          </td>
+          <td>
+			  <span jwcid="colorsHeadField"/>
+            <span jwcid="colorsField"/>
           </td>
 		</tr>
 		<tr>
