纠正TextArea的行和列的错误
git-svn-id: http://dev.bjmaxinfo.com/svn/corner/trunk/corner@2131 bda6c913-8cf9-0310-89cc-b5856a464ced

--- a/src/test/resources/corner/widget/test_TextAreaBox.html
+++ b/src/test/resources/corner/widget/test_TextAreaBox.html
@@ -44,7 +44,7 @@ djConfig = { isDebug: true
 </head>
 
 <body>
-<table><tr><td class="right-td-width"><textarea id="tab"  class="right-td-width"></textarea></td></tr></table>	
+<table><tr><td class="right-td-width"><textarea id="tab" jwcid="CharConfigField" rows="5" class="input-form-ajax_b"  ></textarea><textarea   rows="5" class="input-form-ajax_b"></textarea></td></tr></table>	
 	<input id="tab1"  class="right-td-width"></input>
 </body>
 		<script language="javascript">
