--- a/src/test/resources/corner/widget/test_Select.html
+++ b/src/test/resources/corner/widget/test_Select.html
@@ -14,6 +14,7 @@ djConfig = { isDebug: true
 <SCRIPT LANGUAGE="JavaScript" src="../../../../main/js/dojo/dojo.js"></script>
 <SCRIPT LANGUAGE="JavaScript" src="../../../../main/js/corner/corner.js"></script>
 <script type="text/javascript">
+	dojo.require("dojo.widget.*");
 	dojo.require("corner.widget.Selector");
 	dojo.require("dojo.widget.Select");
 
