--- a/src/test/resources/corner/widget/test_TextArea.html
+++ b/src/test/resources/corner/widget/test_TextArea.html
@@ -16,13 +16,6 @@ djConfig = { isDebug: true
 <script type="text/javascript">
 	dojo.require("corner.widget.TextArea");
 	dojo.require("dojo.widget.Select");
-	
-function init(){	
-	var props = {dataUrl:"TextAreaBox.js"};
-	dojo.widget.createWidget("TextArea",props,dojo.byId("tab"));
-}
-dojo.addOnLoad(init);
-
 </script>
 <style>
 	.input-form,.input-form-99,.input-form-ajax,.input-form-readonly,.input-form-ajax-99{
@@ -53,5 +46,8 @@ dojo.addOnLoad(init);
 <body>
 <table><tr><td class="right-td-width"><input id="tab"  class="right-td-width"></input></td></tr></table>
 </body>
-
+		<script language="javascript">
+			var props = {dataUrl:"TextAreaBoxData.js"};
+			dojo.widget.createWidget("corner:TextArea",props,dojo.byId("tab"));
+		</script>
 </html>
