--- a/src/test/resources/corner/widget/test_TextAreaBox.html
+++ b/src/test/resources/corner/widget/test_TextAreaBox.html
@@ -44,8 +44,16 @@ djConfig = { isDebug: true
 </head>
 
 <body>
-<table><tr><td class="right-td-width"><textarea id="tab" jwcid="CharConfigField" rows="5" class="input-form-ajax_b"  ></textarea><textarea   rows="5" class="input-form-ajax_b"></textarea></td></tr></table>	
-	<input id="tab1"  class="right-td-width"></input>
+<table>
+	<tr>
+		<td class="right-td-width">
+			<textarea id="tab" jwcid="CharConfigField" rows="5" class="input-form-ajax_b">
+			</textarea>
+			<textarea   rows="5" class="input-form-ajax_b">
+			</textarea>
+		</td>
+	</tr>
+</table>	
 </body>
 		<script language="javascript">
 			var props = {dataUrl:"TextAreaBoxData.js"};
