--- a/src/test/resources/corner/widget/test_TextAreaBox.html
+++ b/src/test/resources/corner/widget/test_TextAreaBox.html
@@ -2,7 +2,7 @@
         "http://www.w3.org/TR/html4/strict.dtd">
 <html>
 <head>
-<title>Dojo ComboBox Widget Demo</title>
+<title>Corner TextAreaBox Widget Demo</title>
 <SCRIPT LANGUAGE="JavaScript">
 <!--
 
