--- a/src/test/resources/corner/widget/test_QueryBox.html
+++ b/src/test/resources/corner/widget/test_QueryBox.html
@@ -25,7 +25,7 @@ djConfig = { isDebug: true,
 dojo.require("corner.widget.QueryBox");
 
 dojo.addOnLoad(function(){
-		dojo.widget.createWidget("QueryBox",{widgetId:"testQ"},dojo.byId("testQ"));
+		dojo.widget.createWidget("corner:QueryBox",{widgetId:"testQ"},dojo.byId("testQ"));
 	});
 
 //-->
