row组件保持和参考向量相同的维度
git-svn-id: http://dev.bjmaxinfo.com/svn/corner/trunk/corner@2170 bda6c913-8cf9-0310-89cc-b5856a464ced

--- a/src/test/resources/corner/widget/test_Math.html
+++ b/src/test/resources/corner/widget/test_Math.html
@@ -27,7 +27,8 @@ dojo.require("dojo.event.*");
 dojo.event.connect(dojo.byId("num"),"onkeyup",this,"cal");
 dojo.event.connect(dojo.byId("p"),"onkeyup",this,"cal");
 
-var cal=function(){
+var cal=function(evt){
+	dojo.debug(dojo.html.getEventTarget(evt));
 	dojo.debug("hello world!");
 	value1=dojo.byId("num").value;
 	value2=dojo.byId("p").value;
