增加判断AField和BField大小的validator
git-svn-id: http://dev.bjmaxinfo.com/svn/corner/trunk/corner@2172 bda6c913-8cf9-0310-89cc-b5856a464ced

--- a/src/main/webapp/Home.html
+++ b/src/main/webapp/Home.html
@@ -7,6 +7,8 @@
 		<a jwcid="@PageLink" page="many2many/BList"><span key="many2many-catalog" /></a><br>
 		<hr>
 		<a jwcid="@PageLink" page="many2many2/AList"><span key="many2many2-user" /></a><br>
-		<a jwcid="@PageLink" page="many2many2/BList"><span key="many2many2-catalog" /></a><br>			
+		<a jwcid="@PageLink" page="many2many2/BList"><span key="many2many2-catalog" /></a><br>
+		<hr>
+		<a jwcid="@PageLink" page="validator/FieldMaxForm"><span key="FieldMax" /></a><br>
     </body>
 </html>
