--- a/src/main/webapp/Home.html
+++ b/src/main/webapp/Home.html
@@ -10,5 +10,6 @@
 		<a jwcid="@PageLink" page="many2many2/BList"><span key="many2many2-catalog" /></a><br>
 		<hr>
 		<a jwcid="@PageLink" page="validator/FieldMaxForm"><span key="FieldMax" /></a><br>
+		<a jwcid="@PageLink" page="validator/FieldPlusEqForm"><span key="FieldPlusEqForm" /></a><br>
     </body>
 </html>
