修改fieldMax为fieldMin，并更新使用fieldMin的所以测试
git-svn-id: http://dev.bjmaxinfo.com/svn/corner/trunk/corner@2182 bda6c913-8cf9-0310-89cc-b5856a464ced

--- a/src/main/webapp/Home.html
+++ b/src/main/webapp/Home.html
@@ -9,7 +9,7 @@
 		<a jwcid="@PageLink" page="many2many2/AList"><span key="many2many2-user" /></a><br>
 		<a jwcid="@PageLink" page="many2many2/BList"><span key="many2many2-catalog" /></a><br>
 		<hr>
-		<a jwcid="@PageLink" page="validator/FieldMaxForm"><span key="FieldMax" /></a><br>
+		<a jwcid="@PageLink" page="validator/FieldMinForm"><span key="FieldMin" /></a><br>
 		<a jwcid="@PageLink" page="validator/FieldPlusEqForm"><span key="FieldPlusEqForm" /></a><br>
     </body>
 </html>
