--- a/src/main/webapp/validator/FieldMinList.html
+++ b/src/main/webapp/validator/FieldMinList.html
@@ -1,6 +1,6 @@
 <span jwcid="@DemoBorder">
 	<center>
-		<a jwcid="@PageLink" page="validator/FieldMaxForm"><span key="Add" /></a><br>
+		<a jwcid="@PageLink" page="validator/FieldMinForm"><span key="Add" /></a><br>
 	</center>
 	<center>
 		<form jwcid="AQueryForm">
