完成对MagicField的测试
git-svn-id: http://dev.bjmaxinfo.com/svn/corner/trunk/corner@2223 bda6c913-8cf9-0310-89cc-b5856a464ced

--- a/src/test/resources/corner/validate/test_isInRange.html
+++ b/src/test/resources/corner/validate/test_isInRange.html
@@ -24,7 +24,7 @@ max field <input id="max"	/> min field <input id="min"/><br/>
 <!--
 dojo.require("corner.validate.web");
 
-dojo.event.connect(dojo.byId("num"),"onkeyup",this,"val");
+dojo.event.connect(dojo.byId("num"),"onchange",this,"val");
 val=function(evt){
 	dojo.debug(corner.validate.isInRange(dojo.byId("num").value,{maxField:'max',minField:"min"}));
 }
