修正了Dialog widget的创建方法
git-svn-id: http://dev.bjmaxinfo.com/svn/corner/trunk/corner@2343 bda6c913-8cf9-0310-89cc-b5856a464ced

--- a/src/test/resources/corner/widget/test_Dialog.html
+++ b/src/test/resources/corner/widget/test_Dialog.html
@@ -11,6 +11,9 @@ var dlg;
 function init(e) {
 	//use dojo Dialog widget
 	dlg = dojo.widget.byId("DialogContent");
+	if(!dlg){
+	    dlg = dojo.widget.createWidget("Dialog",{},dojo.byId("DialogContent"));
+	}
 	var btn = document.getElementById("hider");
 	dlg.setCloseControl(btn);
 	
@@ -58,7 +61,7 @@ form {
 <a href="javascript:dlg.show()">Show Dialog</a><br>
 <input type="button" id="alertDialog" value="Show Alert Dialog">
 
-<div dojoType="dialog" id="DialogContent" bgColor="white" bgOpacity="0.5" toggle="fade" toggleDuration="250">
+<div id="DialogContent" bgColor="white" bgOpacity="0.5" toggle="fade" toggleDuration="250">
 	<form onsubmit="return false;">
 		<table>
 			<tr>
