初步完善页面的展现
git-svn-id: http://dev.bjmaxinfo.com/svn/corner/trunk/corner@2358 bda6c913-8cf9-0310-89cc-b5856a464ced

--- a/src/test/resources/corner/widget/querybox_page.html
+++ b/src/test/resources/corner/widget/querybox_page.html
@@ -47,7 +47,7 @@ dojo.addOnUnload(function(){
 //-->
 </SCRIPT>
 </head>
-<body >
+<body style="width:300px;overflow-x:hidden">
 <br/>
 	<form action="?testf=asdf">
 		<input type="text">
