--- a/src/main/webapp/one2many/BForm.html
+++ b/src/main/webapp/one2many/BForm.html
@@ -7,7 +7,7 @@
             <span key="name">name</span>
           </td>
           <td>
-            <input jwcid="nameField" id="name" name="name"/>
+            <input jwcid="nameField"/>
           </td>
         </tr>
       </table>
