git-svn-id: http://dev.bjmaxinfo.com/svn/corner/trunk/corner@2403 bda6c913-8cf9-0310-89cc-b5856a464ced

--- a/src/test/resources/corner/widget/querybox_page.html
+++ b/src/test/resources/corner/widget/querybox_page.html
@@ -19,7 +19,7 @@ djConfig = { isDebug: true,
 
 <SCRIPT LANGUAGE="JavaScript">
 <!--
-var queryBox;
+//var queryBox;
 	
 function clickRadio(obj){
 	queryBox.onSelect(obj);
