--- a/src/test/resources/corner/widget/test_QueryBox.html
+++ b/src/test/resources/corner/widget/test_QueryBox.html
@@ -25,7 +25,9 @@ djConfig = { isDebug: true,
 dojo.require("corner.widget.QueryBox");
 
 dojo.addOnLoad(function(){
-		dojo.widget.createWidget("corner:QueryBox",{widgetId:"testQ",url:"querybox_page.html"},dojo.byId("testQ"));
+		w=dojo.widget.createWidget("corner:QueryBox",{widgetId:"testQ",url:"querybox_page.html"},dojo.byId("testQ"));
+	 dojo.event.connect(w,"processSelectedObj",function(obj){dojo.debug(obj.getAttribute("label"));});
+	
 	});
 
 //-->
