改变测试用例
git-svn-id: http://dev.bjmaxinfo.com/svn/corner/trunk/corner@2406 bda6c913-8cf9-0310-89cc-b5856a464ced

--- a/src/test/resources/corner/widget/querybox_page.html
+++ b/src/test/resources/corner/widget/querybox_page.html
@@ -19,12 +19,24 @@ djConfig = { isDebug: true,
 
 <SCRIPT LANGUAGE="JavaScript">
 <!--
-dojo.addOnLoad(function(evt){
+/* dojo.addOnLoad(function(evt){
 	dojo.event.connect(dojo.byId('r1'),"onclick",function(evt){
 		var src=dojo.html.getEventTarget(evt);
 		queryBox.onSelect(src);
 		
 	});
+}); */
+	
+dojo.event.connect("before",window,"onload",function(e) {
+
+
+dojo.debug("init selected field");
+dojo.event.connect(dojo.byId("r1"),"onclick",function(evt){
+	var src=dojo.html.getEventTarget(evt);
+	parent.dojo.debug("event"+evt+" src:"+src);
+	queryBox.onSelect(src);
+});
+
 });
 
 //-->
