增加uploadBox组建，实现图片文件显示提交功能
git-svn-id: http://dev.bjmaxinfo.com/svn/corner/trunk/corner@2408 bda6c913-8cf9-0310-89cc-b5856a464ced

--- a/src/main/webapp/Home.html
+++ b/src/main/webapp/Home.html
@@ -11,5 +11,6 @@
 		<hr>
 		<a jwcid="@PageLink" page="validator/FieldMinForm"><span key="FieldMin" /></a><br>
 		<a jwcid="@PageLink" page="validator/FieldPlusEqForm"><span key="FieldPlusEqForm" /></a><br>
+		<a jwcid="@PageLink" page="upload/APersonForm"><span key="APersonForm" /></a><br>
     </body>
 </html>
