构造纠正能够在IE上使用
git-svn-id: http://dev.bjmaxinfo.com/svn/corner/trunk/corner@2411 bda6c913-8cf9-0310-89cc-b5856a464ced

--- a/src/main/webapp/widget/QueryBoxTest.html
+++ b/src/main/webapp/widget/QueryBoxTest.html
@@ -8,7 +8,7 @@
 <!--
 
 
-dojo.event.connect("after",window,"onload",function(e) {
+/* dojo.event.connect("after",window,"onload",function(e) {
 	 w=dojo.widget.byId("queryBoxField");
 	 dojo.event.connect(w,"processSelectedObj",dojo.lang.hitch(w,function(obj){
 			dojo.debug(obj.getAttribute("label"));
@@ -17,7 +17,7 @@ dojo.event.connect("after",window,"onload",function(e) {
 		}));
 	
 	});
-
+*/
 //-->
 </script>
 </span>
