--- a/src/main/webapp/widget/SelectionListPage.html
+++ b/src/main/webapp/widget/SelectionListPage.html
@@ -1,3 +1,8 @@
 <span jwcid="@DemoBorder">
-	<input type="radio" jwcid="@corner:SelectedField" label="label"/>r1
+	<table>
+		<tr>
+			<td>	<input type="radio" jwcid="@corner:SelectedField" label="label"/>r1</td><td bgcolor="red">asdfasdfasdff</td>
+		</tr>
+	</table>
+
 </span>
