git-svn-id: http://dev.bjmaxinfo.com/svn/corner/trunk/corner@2414 bda6c913-8cf9-0310-89cc-b5856a464ced

--- a/src/test/resources/corner/widget/test_QueryBox.html
+++ b/src/test/resources/corner/widget/test_QueryBox.html
@@ -75,7 +75,7 @@ dojo.event.connect("after",window,"onload",function(e) {
 dojo.event.connect("before",window,"onload",function(e) {
 dojo.require("tapestry.form");tapestry.form.registerForm("AForm");
 
-        var queryBoxFieldprop={"widgetId":"queryBoxField","inputId":"queryBoxField","inputName":"queryBoxField","url":"http://localhost:8080/widget/SelectionListPage.page"};
+        var queryBoxFieldprop={"widgetId":"queryBoxField","inputId":"queryBoxField","inputName":"queryBoxField","url":"querybox_page.html"};
         tapestry.widget.synchronizeWidgetState("queryBoxField", "corner:QueryBox", queryBoxFieldprop);
     
 tapestry.form.focusField('queryBoxField');
