git-svn-id: http://dev.bjmaxinfo.com/svn/corner/trunk/corner@2415 bda6c913-8cf9-0310-89cc-b5856a464ced

--- a/src/test/resources/corner/widget/querybox_page.html
+++ b/src/test/resources/corner/widget/querybox_page.html
@@ -17,7 +17,7 @@ djConfig = { isDebug: true,
 <SCRIPT LANGUAGE="JavaScript" src="../../../../main/js/corner/corner.js"></script>
 
 </head>
-<body >
+<body style="width:300px;overflow-x:hidden">
 
 	<table>
 		<tr>
