--- a/src/test/resources/corner/widget/querybox_page.html
+++ b/src/test/resources/corner/widget/querybox_page.html
@@ -18,13 +18,8 @@ djConfig = { isDebug: true,
 
 </head>
 <body style="width:300px;overflow-x:hidden">
-
-	<table>
-		<tr>
-			<td>	<input type="radio" label="label" id="SelectedField"></input>r1</td><td bgcolor="red">asdfasdfasdff</td>
-
-		</tr>
-	</table>
+<br/><br/><br/><br/>
+			<input type="radio" label='ÄãºÃÑ½' id='SelectedField' /> r1
 
 
 <!--
