增加查询条件
git-svn-id: http://dev.bjmaxinfo.com/svn/corner/trunk/corner@2419 bda6c913-8cf9-0310-89cc-b5856a464ced

--- a/src/main/webapp/widget/SelectionListPage.html
+++ b/src/main/webapp/widget/SelectionListPage.html
@@ -1,7 +1,11 @@
 <span jwcid="@DemoBorder">
-	<br/>
-	<br/>
-	<br/>
+<br/>
+	<form action="?testf=asdf">
+		<input type="text">
+
+		<input type="submit"/>
+	</form>
+			list:<br/>
 	<table>
 		<tr>
 			<td>	<input type="radio" jwcid="@corner:SelectedField" label="label"/>r1</td><td bgcolor="red">asdfasdfasdff</td>
