git-svn-id: http://dev.bjmaxinfo.com/svn/corner/trunk/corner@2420 bda6c913-8cf9-0310-89cc-b5856a464ced

--- a/src/main/webapp/widget/QueryBoxTest.html
+++ b/src/main/webapp/widget/QueryBoxTest.html
@@ -2,6 +2,7 @@
 <form jwcid="AForm">
 	<input jwcid="queryBoxField" />
 	<br/>
+	<input id="test"/>
 	<input type="submit"/>
 </form>	
 <script>
@@ -14,6 +15,8 @@ dojo.event.connect("after",window,"onload",function(e) {
 			dojo.debug(obj.getAttribute("label"));
 			dojo.debug(this.inputNode);
 			this.inputNode.value=obj.getAttribute("label");
+			//other field
+			dojo.byId('test').value=obj.getAttribute("asdf");
 		}));
 	
 	});
