--- a/src/main/webapp/widget/SelectionListPage.html
+++ b/src/main/webapp/widget/SelectionListPage.html
@@ -8,7 +8,7 @@
 			list:<br/>
 	<table>
 		<tr>
-			<td>	<input type="radio" jwcid="@corner:SelectedField" label="label"/>r1</td><td bgcolor="red">asdfasdfasdff</td>
+			<td>	<input type="radio" jwcid="@corner:SelectedField" label="label" asdf="asdf" fdsa="fdsa"/>r1</td><td bgcolor="red">asdfasdfasdff</td>
 		</tr>
 	</table>
 
