初步完成验证码的生成
git-svn-id: http://dev.bjmaxinfo.com/svn/corner/trunk/corner@2455 bda6c913-8cf9-0310-89cc-b5856a464ced

--- a/src/main/webapp/captcha/Test.html
+++ b/src/main/webapp/captcha/Test.html
@@ -1,6 +1,6 @@
 <span jwcid="@DemoBorder">
 
 	<form>
-	<span jwcid="@captcha:CaptchaImage"/>		
+	<span jwcid="@ServiceLink" service="captcha">	asdf	</span>
 	</form>
 </span>
