初步产生输出验证码图片
git-svn-id: http://dev.bjmaxinfo.com/svn/corner/trunk/corner@2457 bda6c913-8cf9-0310-89cc-b5856a464ced

--- a/src/main/webapp/captcha/Test.html
+++ b/src/main/webapp/captcha/Test.html
@@ -1,6 +1,7 @@
 <span jwcid="@DemoBorder">
 
 	<form>
+	<span jwcid="@corner:CaptchaImage"/>
 	<span jwcid="@ServiceLink" service="captcha">	asdf	</span>
 	</form>
 </span>
