加入对验证码的validator
git-svn-id: http://dev.bjmaxinfo.com/svn/corner/trunk/corner@2458 bda6c913-8cf9-0310-89cc-b5856a464ced

--- a/src/main/webapp/captcha/Test.html
+++ b/src/main/webapp/captcha/Test.html
@@ -1,6 +1,8 @@
 <span jwcid="@DemoBorder">
 
-	<form>
+	<form jwcid="@Form">
+		<input jwcid="@TextField" validators="validators:captcha" value="ognl:entity.name"/>
+		<input type="submit"/>
 	<span jwcid="@corner:CaptchaImage"/>
 	<span jwcid="@ServiceLink" service="captcha">	asdf	</span>
 	</form>
