--- a/src/test/resources/corner/widget/querybox_page2.html
+++ b/src/test/resources/corner/widget/querybox_page2.html
@@ -15,34 +15,25 @@ djConfig = { isDebug: true,
 </SCRIPT>
 <SCRIPT LANGUAGE="JavaScript" src="../../../../main/js/dojo/dojo.js"></script>
 <SCRIPT LANGUAGE="JavaScript" src="../../../../main/js/corner/corner.js"></script>
-
-
-<SCRIPT LANGUAGE="JavaScript">
-<!--
-/* dojo.addOnLoad(function(evt){
-	dojo.event.connect(dojo.byId('r1'),"onclick",function(evt){
-		var src=dojo.html.getEventTarget(evt);
-		queryBox.onSelect(src);
-		
-	});
-}); */
+<script type="text/javascript">
+function autofitIframe(id){
+if (!window.opera && !document.mimeType && document.all && document.getElementById){
+parent.document.getElementById(id).style.height=this.document.body.offsetHeight+"px";
+parent.document.getElementById(id).style.width=this.document.body.offsetWidth+"px";
 	
-dojo.event.connect("before",window,"onload",function(e) {
+}
+else if(document.getElementById) {
+parent.document.getElementById(id).style.height=this.document.body.scrollHeight+"px"
+parent.document.getElementById(id).style.width=this.document.body.scrollWidth+"px";
 
+}
+}
+</script>
 
-dojo.debug("init selected field");
-dojo.event.connect(dojo.byId("r1"),"onclick",function(evt){
-	var src=dojo.html.getEventTarget(evt);
-	parent.dojo.debug("event"+evt+" src:"+src);
-	queryBox.onSelect(src);
-});
-
-});
-
-//-->
-</SCRIPT>
-</head>
-<body style="width:300px;overflow-x:hidden">
+<body onload="autofitIframe('contentFRM')">
+	<table width="1000px">
+		<tr><td>asdfasdfasdfasdfasdfasdfasdfasdfasdfasdfasdfasdfasdfasdfasdfasdfasdfasdfasdf我们</td></tr>
+	</table>
 <br/>
 	<form action="?testf=asdf">
 		<input type="text">
@@ -51,6 +42,21 @@ dojo.event.connect(dojo.byId("r1"),"onclick",function(evt){
 	</form>
 			list:<br/>
 			<input type="radio" label='你好呀' id='r1' /> r1
-
+			<br/>
+			<br/>
+			<br/>
+			<br/>
+			<br/>
+			<br/>
+			<br/>
+			<br/>
+			<br/>
+			<br/>
+			<br/>
+			<br/>
+			<br/>
+			<br/>
+			<br/>
+asdfasdf
 </body>
 </html>
