完成简单的自适应
git-svn-id: http://dev.bjmaxinfo.com/svn/corner/trunk/corner@2465 bda6c913-8cf9-0310-89cc-b5856a464ced

--- a/src/test/resources/corner/widget/querybox_page2.html
+++ b/src/test/resources/corner/widget/querybox_page2.html
@@ -20,11 +20,13 @@ function autofitIframe(id){
 if (!window.opera && !document.mimeType && document.all && document.getElementById){
 parent.document.getElementById(id).style.height=this.document.body.offsetHeight+"px";
 parent.document.getElementById(id).style.width=this.document.body.offsetWidth+"px";
-	
+	parent.dojo.debug("call here");
+	alert("call here");
 }
 else if(document.getElementById) {
 parent.document.getElementById(id).style.height=this.document.body.scrollHeight+"px"
 parent.document.getElementById(id).style.width=this.document.body.scrollWidth+"px";
+parent.dojo.debug("call there");
 
 }
 }
