初步实现了一个变态的dialog
git-svn-id: http://dev.bjmaxinfo.com/svn/corner/trunk/corner@2466 bda6c913-8cf9-0310-89cc-b5856a464ced

--- a/src/test/resources/corner/widget/querybox_page.html
+++ b/src/test/resources/corner/widget/querybox_page.html
@@ -17,9 +17,9 @@ djConfig = { isDebug: true,
 <SCRIPT LANGUAGE="JavaScript" src="../../../../main/js/corner/corner.js"></script>
 
 </head>
-<body style="width:300px;overflow-x:hidden">
+<body style="width:100px;overflow-x:hidden">
 <br/><br/><br/><br/>
-			<input type="radio" label='ÄãºÃÑ½' id='SelectedField' /> r1
+			<input type="radio" label='ï¿½ï¿½ï¿½Ñ½' id='SelectedField' /> r1
 
 
 <!--
