git-svn-id: http://dev.bjmaxinfo.com/svn/corner/trunk/corner@2468 bda6c913-8cf9-0310-89cc-b5856a464ced

--- a/src/test/resources/corner/widget/querybox_page2.html
+++ b/src/test/resources/corner/widget/querybox_page2.html
@@ -42,7 +42,7 @@ parent.dojo.debug("call there");
 }
 </script>
 
-<body onresize="autofitIframe('contentFRM')" onload="autofitIframe('contentFRM')">
+<body onload="autofitIframe('contentFRM')">
 	<table width="500px">
 		<tr><td>asdfasdfasdfasdfasdfasdfasdfasdfasdfasdfasdfasdfasdfasdfasdfasdfasdfasdfasdf我们</td></tr>
 	</table>
