git-svn-id: http://dev.bjmaxinfo.com/svn/corner/trunk/corner@2469 bda6c913-8cf9-0310-89cc-b5856a464ced

--- a/src/test/resources/corner/widget/querybox_page2.html
+++ b/src/test/resources/corner/widget/querybox_page2.html
@@ -29,7 +29,7 @@ else if(document.getElementById) {
 	
 	parent.dojo.debug("height"+height);
 	parent.dojo.debug("width"+width);
-	height=this.document.body.offsetHeight+"px";
+//	height=this.document.body.offsetHeight+"px";
 	parent.dojo.debug("height"+height);
 	
 	parent.dojo.byId(id).style.height=height;
