git-svn-id: http://dev.bjmaxinfo.com/svn/corner/trunk/corner@2470 bda6c913-8cf9-0310-89cc-b5856a464ced

--- a/src/test/resources/corner/widget/querybox_page2.html
+++ b/src/test/resources/corner/widget/querybox_page2.html
@@ -47,6 +47,7 @@ parent.dojo.debug("call there");
 		<tr><td>asdfasdfasdfasdfasdfasdfasdfasdfasdfasdfasdfasdfasdfasdfasdfasdfasdfasdfasdf我们</td></tr>
 	</table>
 <br/>
+	<a href="http://www.sina.com.cn">sina</a>
 	<form action="?testf=asdf">
 		<input type="text">
 
