git-svn-id: http://dev.bjmaxinfo.com/svn/corner/trunk/corner@2472 bda6c913-8cf9-0310-89cc-b5856a464ced

--- a/src/test/resources/corner/widget/querybox_page2.html
+++ b/src/test/resources/corner/widget/querybox_page2.html
@@ -43,7 +43,7 @@ parent.dojo.debug("call there");
 </script>
 
 <body onload="autofitIframe('contentFRM')">
-	<table width="500px">
+	<table width="100%">
 		<tr><td>asdfasdfasdfasdfasdfasdfasdfasdfasdfasdfasdfasdfasdfasdfasdfasdfasdfasdfasdf我们</td></tr>
 	</table>
 <br/>
