git-svn-id: http://dev.bjmaxinfo.com/svn/corner/trunk/corner@2473 bda6c913-8cf9-0310-89cc-b5856a464ced

--- a/src/test/resources/corner/widget/test_Dialog.html
+++ b/src/test/resources/corner/widget/test_Dialog.html
@@ -35,7 +35,7 @@ form {
 <body>
 <a href="javascript:dlg.show()">Show Dialog</a><br>
 	<div id="DialogContent" >
-		<iframe id="contentFRM"  src="querybox_page2.html" marginwidth="0" marginheight="0" scrolling="no" frameborder="1"/>
+		<iframe id="contentFRM"  src="querybox_page2.html" width="100%" marginwidth="0" marginheight="0" scrolling="no" frameborder="1"/>
 		<input type="button" id="hider"/>
 	</div>
 </body>
