--- a/src/test/resources/corner/widget/querybox_page2.html
+++ b/src/test/resources/corner/widget/querybox_page2.html
@@ -42,9 +42,9 @@ parent.dojo.debug("call there");
 }
 </script>
 
-<body onload="autofitIframe('contentFRM')">
+<body >
 	<table width="100%">
-		<tr><td>asdfasdfasdfasdfasdfasdfasdfasdfasdfasdfasdfasdfasdfasdfasdfasdfasdfasdfasdf我们</td></tr>
+		<tr><td>asdfasdfasd fasdfasdfasdfasdf asdfasdfasdfasdfasdfasdfasdfasdfasdfasdfasdfasdf我们</td><td>asdf wo </td></tr>
 	</table>
 <br/>
 	<a href="http://www.sina.com.cn">sina</a>
