fix the test dialog form query
git-svn-id: http://dev.bjmaxinfo.com/svn/corner/trunk/corner@2484 bda6c913-8cf9-0310-89cc-b5856a464ced

--- a/src/test/resources/corner/widget/querybox_page2.html
+++ b/src/test/resources/corner/widget/querybox_page2.html
@@ -42,8 +42,8 @@ parent.dojo.debug("call there");
 }
 </script>
 
-<body >
-	<table width="100%">
+<body style="width:300px" onLoad="autofitIframe('contentFRM')">
+	<table >
 		<tr><td>asdfasdfasd fasdfasdfasdfasdf asdfasdfasdfasdfasdfasdfasdfasdfasdfasdfasdfasdf我们</td><td>asdf wo </td></tr>
 	</table>
 <br/>
@@ -54,7 +54,7 @@ parent.dojo.debug("call there");
 		<input type="submit"/>
 	</form>
 			list:<br/>
-			<input type="radio" label='你好呀' id='r1' /> r1
+			<input type="radio"  name='r1' id='r1' /> r1
 			<br/>
 			<br/>
 			<br/>
