--- a/src/test/resources/corner/widget/querybox_page2.html
+++ b/src/test/resources/corner/widget/querybox_page2.html
@@ -42,7 +42,7 @@ parent.dojo.debug("call there");
 }
 </script>
 
-<body style="width:300px" onLoad="autofitIframe('contentFRM')">
+<body style="width:300px" >
 	<table >
 		<tr><td>asdfasdfasd fasdfasdfasdfasdf asdfasdfasdfasdfasdfasdfasdfasdfasdfasdfasdfasdf我们</td><td>asdf wo </td></tr>
 	</table>
