--- a/src/test/resources/corner/widget/test_Dialog.html
+++ b/src/test/resources/corner/widget/test_Dialog.html
@@ -10,10 +10,9 @@
 	
 	dlg = dojo.widget.createWidget("Dialog",{},dojo.byId("DialogContent"));
 
-	/*
 	var btn = dojo.byId("hider");
-	dlg.setCloseControl(btn);
-	*/
+	dlg.setCloseControl("hider");
+
 	});
 	
 </script>
@@ -34,9 +33,11 @@ form {
 </head>
 <body>
 <a href="javascript:dlg.show()">Show Dialog</a><br>
-	<div id="DialogContent" >
-		<iframe id="contentFRM"  src="querybox_page2.html"  marginwidth="0" marginheight="0" scrolling="no" frameborder="1"/>
-		<input type="button" id="hider"/>
+	<div id="DialogContent" style="width: 600px; height: 400px;">
+		<input type="button" id="hider" value="hide dialog"/><br/>
+		<iframe id="contentFRM"  src="querybox_page2.html" width="100%" height="100%" marginwidth="0" marginheight="0" scrolling="no" frameborder="0"/>
+		
+		<br/>
 	</div>
 </body>
 </html>
